--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
 
     defaultConfig {
         applicationId "devandroid.glaucomv.imagemflutuantektl"
-        minSdk 26
-        targetSdk 33
+        minSdk 31
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +30,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    ndkVersion '25.2.9519653'
+    buildToolsVersion '33.0.2'
 }
 
 dependencies {
@@ -38,7 +40,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core-ktx:+'
+    implementation 'androidx.core:core-ktx:1.10.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
