--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity
-            android:name="devandroid.glaucomv.imagemflutuantektl.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTask">
             <intent-filter>
@@ -21,7 +21,7 @@
         </activity>
 
         <service
-            android:name="devandroid.glaucomv.imagemflutuantektl.FloatingImageService"
+            android:name=".FloatingImageService"
             android:enabled="true"
             android:exported="false" />
     </application>
